--- a/arduino_python/serial_read_arduino.ipynb
+++ b/arduino_python/serial_read_arduino.ipynb
@@ -4435,6 +4435,57 @@
     "    print(val, end=' ')\n",
     "    time.sleep(0.01)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    try:\n",
+    "        datum = arduino.read(1)\n",
+    "        packed = int.from_bytes(aaa, byteorder='big')\n",
+    "        label = packed >> 8\n",
+    "        value = packed & 255\n",
+    "        time.sleep(0.01)\n",
+    "    except KeyboardInterrupt:\n",
+    "        exit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65280"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "255 << 8"
+   ]
   }
  ],
  "metadata": {
@@ -4453,7 +4504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
